--- a/app/views/posts/_search.html.erb
+++ b/app/views/posts/_search.html.erb
@@ -3,7 +3,7 @@
   <div class="card-body mt-2 p-2">
     <p class="border-bottom" style="font-weight: bold;">フリーワードで絞り込む</p>
     <div class="form-group d-flex align-items-center">
-      <%= f.search_field :title_or_content_cont, class: "form-control ml-1 mr-1", style: "border-radius: 15px; border: solid 2px #2DAADB;", placeholder: "(例)転職" %>
+      <%= f.search_field :title_or_content_cont, class: "form-control ml-1 mr-1", style: "border-radius: 15px; border: solid 2px #00DB83;", placeholder: "(例)転職" %>
     </div>
   </div>
   <div class="card-body p-2">
