--- a/app/views/users/_action_count.html.erb
+++ b/app/views/users/_action_count.html.erb
@@ -2,7 +2,7 @@
   <div class="card mt-3 mb-4">
     <div class="card-body">
       <div class="d-flex align-items-center flex-column">
-        <span style="font-size: 18px; color: #2DAADB"><i class="fab fa-quora font-size-lg mr-1"></i>質問数</span>
+        <span style="font-size: 18px; color: #00DB83"><i class="fab fa-quora font-size-lg mr-1"></i>質問数</span>
         <div class="ml-3">
           <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= @user_open_posts.count %></h3>
         </div>
@@ -12,7 +12,7 @@
   <div class="card mt-2 mb-4">
     <div class="card-body">
       <div class="d-flex align-items-center flex-column">
-        <span style="font-size: 18px; color: #2DAADB"><i class="far fa-heart font-size-lg mr-1"></i>いいね！数</span>
+        <span style="font-size: 18px; color: #00DB83"><i class="far fa-heart font-size-lg mr-1"></i>いいね！数</span>
         <div class="ml-3">
           <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= @user.likes_count %></h3>
         </div>
@@ -22,7 +22,7 @@
   <div class="card mt-2 mb-4">
     <div class="card-body">
       <div class="d-flex align-items-center flex-column">
-        <span style="font-size: 18px; color: #2DAADB"><i class="far fa-comment-alt font-size-lg mr-1"></i>回答数</span>
+        <span style="font-size: 18px; color: #00DB83"><i class="far fa-comment-alt font-size-lg mr-1"></i>回答数</span>
         <div class="ml-3">
           <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= @user.answers_count %></h3>
         </div>
