--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -9,7 +9,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="d-flex align-items-center flex-column">
-                  <span style="font-size: 18px; color: #2DAADB"><i class="fab fa-quora font-size-lg mr-1"></i>質問数</span>
+                  <span style="font-size: 18px; color: #00DB83"><i class="fab fa-quora font-size-lg mr-1"></i>質問数</span>
                   <div class="ml-3">
                     <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= current_user.posts.count %></h3>
                     <p class="mt-3 text-center">困ったことや悩んでることは<br>経験者に質問しましょう！</p>
@@ -22,7 +22,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="d-flex align-items-center flex-column">
-                  <span style="font-size: 18px; color: #2DAADB"><i class="fab fa-quora font-size-lg mr-1"></i>いいね！数</span>
+                  <span style="font-size: 18px; color: #00DB83"><i class="fab fa-quora font-size-lg mr-1"></i>いいね！数</span>
                   <div class="ml-3">
                     <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= current_user.likes_count %></h3>
                     <p class="mt-3 text-center">あなたの質問がみんなのためになった数です！</p>
@@ -35,7 +35,7 @@
             <div class="card">
               <div class="card-body">
                 <div class="d-flex align-items-center flex-column">
-                  <span style="font-size: 18px; color: #2DAADB"><i class="fab fa-quora font-size-lg mr-1"></i>回答数</span>
+                  <span style="font-size: 18px; color: #00DB83"><i class="fab fa-quora font-size-lg mr-1"></i>回答数</span>
                   <div class="ml-3">
                     <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= current_user.answers_count %></h3>
                     <p class="mt-3 text-center">多くの人にあなたの経験を伝えましょう！</p>
