--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
           <%= form_with scope: resource, as: resource_name, url: registration_path(resource_name), local: true do |f| %>
           <%= render "devise/shared/error_messages", resource: resource %>
           <div class="mb-4">
-            <h1 class="mb-1 font-weight-bold text-center" style="color: #2DAADB;">新規登録</h1>
+            <h1 class="mb-1 font-weight-bold text-center" style="color: #00DB83;">新規登録</h1>
           </div>
           <!-- Form -->
           <form>
@@ -50,14 +50,14 @@
             </div>
               <!-- Checkbox -->
             <div class="form-group text-center">
-              <span style="font-size: 13px"><a href="#!", style="color: #2DAADB;">利用規約</a>と<a href="#!", style="color: #2DAADB;">プライバシーポリシー</a>をご覧ください</span>
+              <span style="font-size: 13px"><a href="#!", style="color: #00DB83;">利用規約</a>と<a href="#!", style="color: #00DB83;">プライバシーポリシー</a>をご覧ください</span>
             </div>
             <div>
               <!-- Button -->
               <%= f.submit "上記同意のうえ無料会員登録する", class: "btn btn-success btn-block", style: "font-weight: bold;" %>
             </div>
             <div class="mt-3 text-center">
-              <span>アカウントをお持ちの方はこちら「<%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, style: "color: #2DAADB;"%> 」</span>
+              <span>アカウントをお持ちの方はこちら「<%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, style: "color: #00DB83;"%> 」</span>
             </div>
           </form>
           <% end %>
