--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand-lg navbar-default">
   <div class="container-fluid px-0">
     <%= link_to "/",class: "navbar-brand",data: {"turbolinks" => false} do%>
-    <%= image_tag 'keiken_logo.png', style: "height: 38px;"%>
+    <%= image_tag 'keiken_green.png', style: "height: 38px;"%>
     <% end %>
     <!-- Mobile view nav wrap -->
     <ul class="navbar-nav navbar-right-wrap ml-auto d-lg-none d-flex nav-top-wrap ">
