--- a/app/views/tops/_how_to.html.erb
+++ b/app/views/tops/_how_to.html.erb
@@ -4,7 +4,7 @@
       <!-- Features -->
       <div class="col-xl-4 col-lg-4 col-md-12 mb-lg-0 mb-4 p-3">
         <div class="d-flex align-items-center flex-column">
-          <span style="font-size: 18px; color: #2DAADB"><i class="far fa-check-circle font-size-lg mr-1"></i>STEP1</span>
+          <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>STEP1</span>
           <div class="ml-3">
             <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">経験者を探す</h4>
             <p class="mt-3 text-center">目的の経験を持つ人を探します。メッセージを送って相談・取材可否も確認できます。</p>
@@ -14,7 +14,7 @@
       <!-- Features -->
       <div class="col-xl-4 col-lg-4 col-md-12 mb-lg-0 mb-4 p-3">
         <div class="d-flex align-items-center flex-column">
-          <span style="font-size: 18px; color: #2DAADB"><i class="far fa-check-circle font-size-lg mr-1"></i>STEP2</span>
+          <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>STEP2</span>
           <div class="ml-3">
             <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">スケジュールを決める</h4>
             <p class="mt-3 text-center">メッセージを通してお互いの都合の合う相談日や取材日を決めます。</p>
@@ -24,7 +24,7 @@
       <!-- Features -->
       <div class="col-xl-4 col-lg-4 col-md-12 mb-lg-0 mb-4 p-3">
         <div class="d-flex align-items-center flex-column">
-          <span style="font-size: 18px; color: #2DAADB""><i class="far fa-check-circle font-size-lg mr-1"></i>STEP3</span>
+          <span style="font-size: 18px; color: #00DB83""><i class="far fa-check-circle font-size-lg mr-1"></i>STEP3</span>
           <div class="ml-3">
             <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">対話を開始</h4>
             <p class="mt-3 text-center">契約後、専用ルームからビデオ通話やチャットをスタート。(外部ツールの利用もOK)</p>
