--- a/app/views/tops/_about.html.erb
+++ b/app/views/tops/_about.html.erb
@@ -2,7 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h2 style="font-weight: bold;">「経験のある人に話を聞きたい人」と「経験者」をつなぐプラットフォーム</h2>
+        <h1 style="font-weight: bold;"><%= image_tag 'keiken_icon_green.png', class: "img-fluid mr-2 mb-2", style: "height: 50px;" %>Keikenとは？</h1>
+        <p style="font-weight: bold;">いま困っていること、悩んでいることを自由に<br>経験者に質問ができるコミュニティサイトです。</p>
       </div>
       <div class="col-lg-3 col-md-6 col-6 p-0">
         <div class="pt-4 mt-3 mb-5 text-center pr-3 pl-3 border-right">
