--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Favicon icon-->
-    <link rel="shortcut icon" type="image/x-icon" href="/geeks-1.0.1/dist/assets/images/favicon/favicon.ico">
+    <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
     <!-- Libs CSS -->
     <%= render 'layouts/libs_css' %>
     <!-- Theme CSS -->
@@ -12,7 +12,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <title>QAApp</title>
+    <title>Keiken</title>
   </head>
 
   <body>
