--- a/app/views/tops/_how_to.html.erb
+++ b/app/views/tops/_how_to.html.erb
@@ -4,30 +4,30 @@
       <!-- Features -->
       <div class="col-xl-4 col-lg-4 col-md-12 mb-lg-0 mb-4 p-3">
         <div class="d-flex align-items-center flex-column">
-          <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>STEP1</span>
+          <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>POINT1</span>
           <div class="ml-3">
-            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">経験者を探す</h4>
-            <p class="mt-3 text-center">目的の経験を持つ人を探します。メッセージを送って相談・取材可否も確認できます。</p>
+            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">聞きたいことを経験者に聞ける</h4>
+            <p class="mt-3 text-center">あなたと同様な経験をした人が質問に答えて<br>くれるから安心して情報が得られる！</p>
           </div>
         </div>
       </div>
       <!-- Features -->
       <div class="col-xl-4 col-lg-4 col-md-12 mb-lg-0 mb-4 p-3">
         <div class="d-flex align-items-center flex-column">
-          <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>STEP2</span>
+          <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>POINT2</span>
           <div class="ml-3">
-            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">スケジュールを決める</h4>
-            <p class="mt-3 text-center">メッセージを通してお互いの都合の合う相談日や取材日を決めます。</p>
+            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">経験者のエピソード付き</h4>
+            <p class="mt-3 text-center">経験者の体験に基づいたエピソードも<br>一緒に教えてくれるからさらに安心！</p>
           </div>
         </div>
       </div>
       <!-- Features -->
       <div class="col-xl-4 col-lg-4 col-md-12 mb-lg-0 mb-4 p-3">
         <div class="d-flex align-items-center flex-column">
-          <span style="font-size: 18px; color: #00DB83""><i class="far fa-check-circle font-size-lg mr-1"></i>STEP3</span>
+          <span style="font-size: 18px; color: #00DB83""><i class="far fa-check-circle font-size-lg mr-1"></i>POINT3</span>
           <div class="ml-3">
-            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">対話を開始</h4>
-            <p class="mt-3 text-center">契約後、専用ルームからビデオ通話やチャットをスタート。(外部ツールの利用もOK)</p>
+            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">無料で質問ができる</h4>
+            <p class="mt-3 text-center">経験者への質問はすべて無料。<br>もちろん経験者からの回答閲覧も無料です。</p>
           </div>
         </div>
       </div>
