--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,5 +34,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/1.5.12/clipboard.min.js"></script>
     <!-- Theme JS -->
     <script src="/geeks-1.0.1/dist/assets/js/theme.min.js"></script>
+    <%= render 'layouts/footer' %>
   </body>
 </html>
