--- a/app/views/tops/_about.html.erb
+++ b/app/views/tops/_about.html.erb
@@ -1,4 +1,4 @@
-<div class="py-5">
+<div class="py-5 bg-white shadow-sm">
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
@@ -8,29 +8,30 @@
       <div class="col-lg-3 col-md-6 col-6 p-0">
         <div class="pt-4 mt-3 mb-5 text-center pr-3 pl-3 border-right">
           <h3 class="font-weight-bold mb-2">Case1</h3>
-          <%= image_tag 'keiken_logo.png', class: "card-img" %>
+          <%= image_tag 'nayami1.png', class: "card-img" %>
           <p class="mt-2">IT業界に就職・転職をするために、働いている人に直接話を聞いてみたい</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-6 p-0">
         <div class="pt-4 mt-3 mb-5 text-center pr-3 pl-3 border-right">
           <h3 class="font-weight-bold mb-2">Case2</h3>
-          <%= image_tag 'keiken_logo.png', class: "card-img" %>
+          <%= image_tag 'nayami2.png', class: "card-img" %>
           <p class="mt-2">webライターとして執筆するために、特定の経験を持つ人に取材がしたい</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-6 p-0">
         <div class="pt-4 mt-3 mb-5 text-center pr-3 pl-3 border-right">
           <h3 class="font-weight-bold mb-2">Case3</h3>
-          <%= image_tag 'keiken_logo.png', class: "card-img" %>
+          <%= image_tag 'nayami2.png', class: "card-img" %>
           <p class="mt-2">はじめての育児でわからないことだらけ。先輩ママに相談にのってほしい</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-6 p-0">
         <div class="pt-4 mt-3 mb-5 text-center pl-3 pr-3">
           <h3 class="font-weight-bold mb-2">Case4</h3>
-          <%= image_tag 'keiken_logo.png', class: "card-img" %>
+          <%= image_tag 'nayami3.png', class: "card-img" %>
           <p class="mt-2">イギリス留学に興味があり、準備や実際の生活について詳しく聞きたい</p>
+        </div>
       </div>
     </div>
   </div>
