--- a/app/views/tops/_how_to.html.erb
+++ b/app/views/tops/_how_to.html.erb
@@ -1,4 +1,4 @@
-<div class="bg-white py-4 shadow-sm">
+<div class="pg-primary py-4 shadow-sm", style=" background-color: #F7F7F7;">
   <div class="container">
     <div class="d-lg-flex align-items-center no-gutters">
       <!-- Features -->
@@ -30,6 +30,11 @@
             <p class="mt-3 text-center">経験者への質問はすべて無料。<br>もちろん経験者からの回答閲覧も無料です。</p>
           </div>
         </div>
+      </div>
+    </div>
+    <div class="col-12">
+      <div class="d-flex align-items-center justify-content-center text-center mb-3">
+        <%= link_to "さっそく始める", new_user_registration_path, class: "btn btn-success btn-rounded pl-10 pr-10 rounded-lg" %>
       </div>
     </div>
   </div>
