fixed category page color

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -8,7 +8,7 @@
           </div>
         </div>
         <div class="card border-0 mb-4">
-          <div class="card-header" style=" background-color: #DCF0F9;">
+          <div class="card-header" style=" background-color: #C9FCC9;">
             <h4 class="mb-0">
               <%= @parent_1.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_1.id).count})"%></span>
             </h4>
@@ -24,7 +24,7 @@
           </div>
         </div>
         <div class="card border-0 mb-4">
-          <div class="card-header" style=" background-color: #DCF0F9;">
+          <div class="card-header" style=" background-color: #C9FCC9;">
             <h4 class="mb-0">
               <%= @parent_2.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_2.id).count})"%></span>
             </h4>
@@ -40,7 +40,7 @@
           </div>
         </div>
         <div class="card border-0 mb-4">
-          <div class="card-header" style=" background-color: #DCF0F9;">
+          <div class="card-header" style=" background-color: #C9FCC9;">
             <h4 class="mb-0">
               <%= @parent_3.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_3.id).count})"%></span>
             </h4>
@@ -56,7 +56,7 @@
           </div>
         </div>
         <div class="card border-0 mb-4">
-          <div class="card-header" style=" background-color: #DCF0F9;">
+          <div class="card-header" style=" background-color: #C9FCC9;">
             <h4 class="mb-0">
               <%= @parent_4.name %><span class="text-muted font-size-xs"><%= "(#{Post.where(category_id: @parent_4.id).count})"%></span>
             </h4>
