--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -19,3 +19,51 @@
 </div>
 <%= render 'about' %>
 <%= render 'how_to' %>
+<div class="p-lg-5 py-5 bg-white">
+  <div class="container">
+    <div class="col-12 text-center mb-3">
+      <h1 style="font-weight: bold;">最新の質問</h1>
+    </div>
+    <div class="row col-12">
+      <% if @recent_posts.present? %>
+        <% @recent_posts.each do |recent_post| %>
+        <%= link_to post_path(recent_post),data: {"turbolinks" => false}, class: "text-inherit" do %>
+        <div class="d-flex justify-beween-center align-items-center">
+          <div class="col-12">
+            <div class="card mb-5 border">
+              <div class="card-body">
+                <div class="d-flex align-items-center">
+                  <div class="d-flex align-items-center justify-content-between flex-column">
+                    <% if recent_post.user.profile_image.present? %>
+                      <%= image_tag recent_post.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
+                      <%= recent_post.user.name %>
+                    <% else %>
+                      <%= image_tag "profile_default_img_128.png", class: "avatar-lg rounded-circle border-width-4 border-white" %>
+                      <%= recent_post.user.name %>
+                    <% end %>
+                  </div>
+                  <div class="ml-3 d-flex flex-column">
+                    <h4 class="mb-1" style="font-weight: bold;"><%= recent_post.title.truncate(25) %></h4>
+                    <p><%= recent_post.content.truncate(30) %></p>
+                    <div class="d-flex flex-row">
+                      <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{recent_post.category.root.name}/#{recent_post.category.name}" %></li>
+                      <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-heart ml-2 mr-1"></i><%= recent_post.likes.count %></li>
+                      <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt ml-2 mr-1"></i><%= recent_post.answers.count %></li>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
+        <% end %>
+      <% else %>
+      <P>受付中の質問はありません</p>
+      <% end %>
+    </div>
+    <div class="text-right">
+    <%= link_to "もっと見る", posts_path, class: "text-inherit font-size-md"%>
+    </div>
+  </div>
+</div>
