--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,7 +1,7 @@
 <div class="p-lg-5 py-5">
   <div class="container">
     <div class="row">
-      <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-4">
+      <div class="col-xl-12 col-lg-12 col-md-12 col-12 mb-5 mt-4">
         <div class="border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
           <div>
             <h1 class="mb-0 h2">カテゴリー</h1>
@@ -17,7 +17,7 @@
             <% @parent_1.children.each do |children_category| %>
             <div class="col-md-2 col-3 text-center">
               <div class="p-xl-3 p-lg-3 mt-1 mb-2 mb-lg-0">
-                <%= children_category.name %>
+                <%= link_to children_category.name, category_path(children_category), class: "text-inherit"  %>
               </div>
             </div>
             <% end %>
