--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -14,7 +14,6 @@
             <% end %>
           </div>
         </div>
-        <a>
           <div class="card mb-5">
             <div class="card-body">
               <div class="d-flex align-items-center">
@@ -32,9 +31,11 @@
                 <div class="ml-3 d-flex flex-column">
                   <h4 class="mb-3" style="font-weight: bold;"><%= @post.title %></h4>
                   <p class="mb-3" style="font-weight: bold;"><%= @post.content %></p>
+                  <div class="text-center" style="d-flex: block;">
                   <% if @post.post_image.present? %>
                     <%= image_tag @post.post_image.url, class: "img-fluid mb-4", style:"height: 200px; width: auto; object-fit: cover;"%>
                   <% end %>
+                  </div>
                   <div class="d-flex flex-row">
                     <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{@post.category.root.name}/#{@post.category.name}" %></li>
                     <% if user_signed_in? %>
@@ -49,13 +50,12 @@
                     <% else %>
                       <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-heart ml-2 mr-1"></i><%= @post.likes.count %></li>
                     <% end %>
-                    <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt mr-1"></i><%= "#{@post.answers.count}件" %></li>
+                    <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt mr-1"></i><%= "#{@post.answers.count}" %></li>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </a>
         <div class="card rounded-lg">
           <div class="card-body">
             <div class="mb-2 d-flex justify-content-between pb-2 mb-4 align-items-center" style="border-bottom: 2px solid #eae7f5">
