--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -1,3 +1,3 @@
 // @import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import "users/edit";
-@import "posts/new";
+// @import "users/edit";
+// @import "posts/new";
