--- a/app/javascript/stylesheets/posts/new.scss
+++ b/app/javascript/stylesheets/posts/new.scss
@@ -1,5 +1,5 @@
-#post-img-prev {
-  height: auto;
-  width: 100%;
-  object-fit: cover;
-}
+// #post-img-prev {
+//   height: auto;
+//   width: 100%;
+//   object-fit: cover;
+// }
