--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -5,7 +5,7 @@
 		<div class="row align-items-center">
 			<div class="col-xl-12 col-lg-12 col-md-12 col-12 d-none d-md-block">
 				<!-- Bg -->
-				<div class="pt-16 rounded-top" style="background-color: #87CEEB; no-repeat; background-size: cover;"></div>
+				<div class="pt-16 rounded-top" style="background-color: #C9FCC9; no-repeat; background-size: cover;"></div>
 				<div class="d-flex align-items-end justify-content-between bg-white px-4 pt-2 pb-4 rounded-none rounded-bottom shadow-sm">
 					<div class="d-flex align-items-center">
 						<div class="mr-2 position-relative d-flex justify-content-end align-items-end mt-n5">
