--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,12 +17,12 @@
     <%= render 'layouts/header' %>
     <% if flash[:notice] %>
       <div class="alert alert-info">
-        <%= flash[:notice] %>
+        <i class="far fa-check-circle mr-1"></i><%= flash[:notice] %>
       </div>
     <% end %>
     <% if flash[:alert] %>
       <div class="alert alert-danger">
-        <%= flash[:alert] %>
+        <i class="far fa-check-circle mr-1"></i><%= flash[:alert] %>
       </div>
     <% end %>
     <%= yield %>
