--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -15,6 +15,7 @@
 					</div>
 					<!-- Card body -->
           <%= form_with(model: @post, local: true) do |f| %>
+					<%= render 'layouts/error_messages', model: f.object %>
 					<div class="card-body">
             <div class="card-body pb-1">
 							<div class="d-flex align-items-center mb-4 mb-lg-0">
@@ -54,7 +55,7 @@
                   </div>
 									<div class="form-group col-12 col-md-12">
 										<div class="actions">
-											<span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "カテゴリー", class: "form-label"%>
+											<span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "カテゴリ", class: "form-label"%>
 										  <select id="parent_category">
 												<option hidden>選択してください</option>
 										    <% @parent_categories.each do |c| %>
