--- a/app/views/users/_nonpublic_user_profile_heading.html.erb
+++ b/app/views/users/_nonpublic_user_profile_heading.html.erb
@@ -1,5 +1,5 @@
 <!-- Bg -->
-<div class="py-20" style="background-color: #87CEEB; no-repeat;background-position: center;"></div>
+<div class="py-20" style="background-color: #C9FCC9; no-repeat;background-position: center;"></div>
 <!-- User info -->
 <div class="card p-lg-2 pt-2 pt-lg-0 rounded-0 border-0">
   <div class="container">
