--- a/public/geeks-1.0.1/src/assets/css/custom.css
+++ b/public/geeks-1.0.1/src/assets/css/custom.css
@@ -271,3 +271,11 @@ a {
     margin: 8px auto;
   }
 }
+
+.alert {
+  color:#262626;
+  background:#FFEBE8;
+  text-align: left;
+  border:2px solid #990000;
+  padding:12px; font-weight:850;
+}
