--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -15,6 +15,7 @@
 					</div>
 					<!-- Card body -->
           <%= form_with(model: @post, local: true) do |f| %>
+					<%= render 'layouts/error_messages', model: f.object %>
 					<div class="card-body">
             <div class="card-body pb-1">
 							<div class="d-flex align-items-center mb-4 mb-lg-0">
