--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -116,6 +116,7 @@
               </div>
               <div class="card-body">
                 <%= form_with(model: [answer.post, answer, Comment.new], local: true) do |f| %>
+                <%= render 'layouts/error_messages', model: f.object %>
                 <div class="form-group col-12 col-md-12">
                   <div class="form-group">
                     <div class="field">
