--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -17,7 +17,7 @@
               <!-- メールアドレス -->
             <div class="form-group">
               <%= f.label "新しいパスワードを入力してください", class: "form-label"%>
-              <%= f.password_field :password, autofocus: true, placeholder: "メールアドレス", class: "form-control" %>
+              <%= f.password_field :password, autofocus: true, placeholder: "パスワード", class: "form-control" %>
             </div>
             <div class="form-group">
               <%= f.label "パスワードの確認", class: "form-label"%>
