--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -1,5 +1,9 @@
-<p>Welcome <%= @email %>!</p>
+<p><%= @email %>さま</p>
 
-<p>You can confirm your account email through the link below:</p>
+<p>この度はKeikenをご利用いただき誠にありがとうございます。</p>
 
-<p><%= link_to 'Confirm my account', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p>以下、リンクにアクセスいただき、会員登録の完了をお願いいたします。</p>
+
+<p><%= link_to 'ログインして会員登録を完了する', confirmation_url(@resource, confirmation_token: @token) %></p>
+
+<p>Keiken運営事務局</p>
