--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -59,6 +59,9 @@
             <div class="mt-3 text-center">
               <span>アカウントをお持ちの方はこちら「<%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, style: "color: #00DB83;"%> 」</span>
             </div>
+            <div class="mt-3 text-center">
+              <span><%= link_to "本会員登録用の認証メールの再送はこちら", new_user_confirmation_path,data: {"turbolinks" => false}, class: "text-muted"%> </span>
+            </div>
           </form>
           <% end %>
         </div>
