--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -33,6 +33,7 @@
             <% end %>
           </ul>
         </div>
+        <%= paginate @notifications %>
       </div>
     </div>
   </div>
