--- a/app/views/answers/new.html.erb
+++ b/app/views/answers/new.html.erb
@@ -1,6 +1,7 @@
 <div class="pt-5 pb-5">
 	<div class="container">
     <div class="row">
+			<%= render partial: "mypage/account_menu_mt-0" %>
       <div class="col-lg-9 col-md-9 col-12">
       <%= render 'post_info' %>
         <%= form_with(model: [@post, @answer], local: true) do |f| %>
