edited text of comment mailer

--- a/app/views/comment_mailer/send_comment_notification_mail.text.erb
+++ b/app/views/comment_mailer/send_comment_notification_mail.text.erb
@@ -1,8 +1,10 @@
 日頃よりKeikenをご利用いただき誠にありがとうございます。
 
-あなたの回答にコメントがありました。" %>
+あなたの回答にコメントがありました。
 
 ログインしてご確認をお願いいたします。
+
+<%= link_to "Keikenへログイン", new_user_session_path %>
 　
 よろしくお願いいたします。
 
