installed meta-tags

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <%= display_meta_tags(default_meta_tags) %>
     <!-- Favicon icon-->
     <%= favicon_link_tag 'favicon.ico', :rel => 'shortcut icon' %>
     <!-- Libs CSS -->
@@ -12,7 +13,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= render 'layouts/gtm_head' %>
-    <title>Keiken</title>
   </head>
   <body>
     <%= render 'layouts/gtm_noscript' %>
