set to create site-map

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<% set_meta_tags title: "Keiken-#{@post.title}", description: @post.content, og: { title: @post.title, description: @post.content } %>
 <div class="p-lg-5 py-5">
   <div class="container">
     <div class="row mt-4">
