--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -51,7 +51,7 @@
             </div>
               <!-- Checkbox -->
             <div class="form-group text-center">
-              <span style="font-size: 13px"><a href="#!", style="color: #00DB83;">利用規約</a>と<a href="#!", style="color: #00DB83;">プライバシーポリシー</a>をご覧ください</span>
+              <span style="font-size: 13px"><a href="/kiyaku", style="color: #00DB83;">利用規約</a>と<a href="/privacy", style="color: #00DB83;">プライバシーポリシー</a>をご覧ください</span>
             </div>
             <div>
               <!-- Button -->
