--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -9,10 +9,8 @@
             <!-- Links -->
           <div class="col-12 col-md-6">
               <nav class="nav nav-footer justify-content-center justify-content-md-end">
-                  <a class="nav-link active pl-0" href="#!">Privacy</a>
-                  <a class="nav-link" href="#!">Terms </a>
-                  <a class="nav-link" href="#!">Feedback</a>
-                  <a class="nav-link" href="#!">Support</a>
+                  <a class="nav-link" href="/kiyaku">利用規約</a>
+                  <a class="nav-link active pl-0" href="/privacy">プライバシーポリシー</a>
               </nav>
           </div>
       </div>
