--- a/app/views/tops/_about.html.erb
+++ b/app/views/tops/_about.html.erb
@@ -23,7 +23,7 @@
         <div class="pt-4 mt-3 mb-5 text-center pr-3 pl-3 border-right">
           <h3 class="font-weight-bold mb-2">Case3</h3>
           <%= image_tag 'nayami3.png', class: "card-img" %>
-          <p class="mt-2">未経験でプログラマーへの転職を目指しています。HTML/CSS/JabaScriptは習得済みです。どれくらい言語を身に着けたら就活で相手にしてもらえますか？</p>
+          <p class="mt-2">未経験でプログラマーへの転職を目指しています。HTML/CSS/JavaScriptは習得済みです。どれくらい言語を身に着けたら就活で相手にしてもらえますか？</p>
         </div>
       </div>
       <div class="col-lg-3 col-md-6 col-6 p-0">
