--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -18,18 +18,16 @@
           <div class="card mb-5">
             <div class="card-body">
               <div class="d-flex align-items-center">
-                <div class="d-flex flex-column justify-content-between align-items-center mb-2">
-                  <% if @post.user.profile_image.present? %>
-                  <%= image_tag @post.user.profile_image.url, class: "rounded-circle avatar-md mb-2" %>
-                  <% else %>
-                  <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mb-2" %>
-                  <% end %>
-                  <div class="d-flex flex-column mb-2 text-center">
-                    <h4 class="mb-1"><%= @post.user.name %></h4>
+                <div class="d-flex flex-column">
+                  <div class="d-flex flex-row mb-2 align-items-center">
+                    <% if @post.user.profile_image.present? %>
+                    <%= image_tag @post.user.profile_image.url, class: "rounded-circle avatar-md mr-2" %>
+                    <% else %>
+                    <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mr-2" %>
+                    <% end %>
+                    <h4 class="mr-2 mb-0"><%= @post.user.name %></h4>
                     <span class="font-size-xs text-muted"><%= time_ago_in_words(@post.created_at) + "前" %></span>
                   </div>
-                </div>
-                <div class="ml-3 d-flex flex-column">
                   <h4 class="mb-3" style="font-weight: bold;"><%= @post.title %></h4>
                   <p class="mb-3" style="font-weight: bold;"><%= @post.content %></p>
                   <div class="text-center" style="d-flex: block;">
@@ -61,8 +59,8 @@
           <div class="card-body">
             <div class="mb-2 d-flex justify-content-between pb-2 mb-4 align-items-center" style="border-bottom: 2px solid #eae7f5">
               <h2>回答<%="(#{@post.answers.count})"%><h2>
-              <% if @post.status == 0 %>
-                <%= link_to "経験者として回答する", new_post_answer_path(@post.id), class: "btn btn-success"%>
+              <% if @post.status == "open" %>
+                <%= link_to "経験者として回答する", new_post_answer_path(@post.id), class: "btn btn-success btn-sm"%>
               <% end %>
             </div>
             <% if @answers.present? %>
@@ -70,28 +68,22 @@
             <div class="card rounded-lg border mb-4" style="background-color: #f5f5f5;">
               <div class="card-body p-2">
                 <div class="d-flex align-items-center">
-                  <div class="col-2 d-flex flex-column justify-content-between align-items-center m-2">
-                    <% if answer.user.profile_image.present? %>
-                      <%= image_tag answer.user.profile_image.url, class: "rounded-circle avatar-lg" %>
-                    <% else %>
-                      <%= image_tag 'profile_default_img_128', class:"rounded-circle avatar-lg" %>
-                    <% end %>
-                    <div>
-                      <h4><%= answer.user.name %></h4>
+                  <div class="d-flex flex-column m-2">
+                    <div class="d-flex flex-row mb-2 align-items-center">
+                      <% if answer.user.profile_image.present? %>
+                        <%= image_tag answer.user.profile_image.url, class: "rounded-circle avatar-md mr-2" %>
+                      <% else %>
+                        <%= image_tag 'profile_default_img_128', class:"rounded-circle avatar-md mr-2" %>
+                      <% end %>
+                      <h4 class="mr-2 mb-0"><%= answer.user.name %></h4>
                       <span class="font-size-xs text-muted"><%= time_ago_in_words(answer.created_at) + "前" %></span>
                     </div>
-                  </div>
-                  <div class="col-10 d-flex flex-column m-2">
-                    <div class="card-body">
-                      <div class="border-bottom">
-                        <h3 class="badge badge-light-danger text-danger">経験エピソード</h3>
-                      </div>
+                    <div class="pl-0">
+                      <h3 class="badge badge-light-danger text-danger" style="width: 90px;">経験エピソード</h3>
                       <p><%= answer.episode %></p>
                     </div>
-                    <div class="card-body">
-                      <div class="border-bottom">
-                        <h3 class="badge badge-light-danger text-danger mr-2">質問への回答</h3>
-                      </div>
+                    <div class="pl-0">
+                      <h3 class="badge badge-light-danger text-danger px-2" style="width: 90px;">質問への回答</h3>
                       <p><%= answer.content %></p>
                     </div>
                   </div>
@@ -117,7 +109,7 @@
                 </div>
                 <% end %>
               </div>
-              <% if @post.status == 0 %>
+              <% if @post.status == "open" %>
               <div class="card-body">
                 <%= form_with(model: [answer.post, answer, Comment.new], local: true) do |f| %>
                 <%= render 'layouts/error_messages', model: f.object %>
@@ -130,7 +122,7 @@
                   </div>
                 </div>
                 <div class="text-center">
-                  <%= f.submit "コメントする", class: "btn btn-success text-nowrap btn-lg", style: "font-weight: bold;" %>
+                  <%= f.submit "コメントする", class: "btn btn-success text-nowrap btn-sm", style: "font-weight: bold;" %>
                 </div>
                 <% end %>
               </div>
