edited user update validation

--- a/app/views/mypage/_profile_heading.html.erb
+++ b/app/views/mypage/_profile_heading.html.erb
@@ -34,7 +34,7 @@
       </div>
       <div class="col-lg-4 col-md-4 col-12">
         <div class="font-size-md mt-4 mt-lg-0 pb-2 pb-lg-0 d-flex justify-content-center text-nowrap">
-          <%= link_to "登録情報を変更", edit_user_registration_path,data: {"turbolinks" => false}, class: "btn btn-success mr-2" %>
+          <%= link_to "登録情報を変更", edit_user_registration_path,data: {"turbolinks" => false}, class: "btn btn-success btn-sm mr-2" %>
         </div>
       </div>
     </div>
