--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -62,7 +62,7 @@
       <div class="col-xl-9 col-lg-9 col-12 mb-5">
         <div class="d-flex border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
           <div>
-            <h1 class="mb-0 h2">あなたの投稿</h1>
+            <h1 class="mb-0 h2">あなたの質問</h1>
           </div>
         </div>
         <ul class="nav nav-lb-tab mb-4" id="tab" role="tablist">
