--- a/app/views/devise/mailer/confirmation_instructions.html.erb
+++ b/app/views/devise/mailer/confirmation_instructions.html.erb
@@ -2,8 +2,8 @@
 
 <p>この度はKeikenをご利用いただき誠にありがとうございます。</p>
 
-<p>以下、リンクにアクセスいただき、会員登録の完了をお願いいたします。</p>
+<p>以下、リンクにアクセスいただき、本人確認の完了をお願いいたします。</p>
 
-<p><%= link_to 'ログインして会員登録を完了する', confirmation_url(@resource, confirmation_token: @token) %></p>
+<p><%= link_to '本人確認を完了する', confirmation_url(@resource, confirmation_token: @token) %></p>
 
 <p>Keiken運営事務局</p>
