--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -37,7 +37,7 @@
               </div>
             </div>
             <div class="form-group d-flex flex-column">
-              <div><span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "生年月日", class: "form-label"%></div>
+              <div><span class="badge badge-light-danger text-danger mr-2 mb-2">必須</span><%= f.label "生年月日", class: "form-label mb-2"%></div>
               <div><%= raw sprintf(f.date_select(:birth_date, with_css_classes:'year month day', prompt:"--",use_month_numbers:true, start_year:Time.now.year, end_year:1900, date_separator:'%s'),'年','月')+'日' %></div>
             </div>
               <!-- Password -->
@@ -47,21 +47,23 @@
             </div>
             <div class="form-group">
             <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "パスワードの確認", class: "form-label"%>
-              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "上記で入力したパスワードを再入力してください", class: "form-control" %>
+              <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "パスワードの再入力", class: "form-control" %>
             </div>
               <!-- Checkbox -->
             <div class="form-group text-center">
-              <span style="font-size: 13px"><a href="/kiyaku", style="color: #00DB83;">利用規約</a>と<a href="/privacy", style="color: #00DB83;">プライバシーポリシー</a>をご覧ください</span>
+              <span style="font-size: 11px"><a href="/kiyaku", style="color: #00DB83;">利用規約</a>と<a href="/privacy", style="color: #00DB83;">プライバシーポリシー</a>をご覧ください</span>
             </div>
             <div>
-              <!-- Button -->
               <%= f.submit "上記同意のうえ無料会員登録する", class: "btn btn-success btn-block", style: "font-weight: bold;" %>
+              <p class="text-center font-size-xs">登録後、本人確認メールが届きますので、<br>そちらより初回ログインをお願いいたします。</p>
             </div>
-            <div class="mt-3 text-center">
-              <span>アカウントをお持ちの方はこちら「<%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, style: "color: #00DB83;"%> 」</span>
-            </div>
-            <div class="mt-3 text-center">
-              <span><%= link_to "本会員登録用の認証メールの再送はこちら", new_user_confirmation_path,data: {"turbolinks" => false}, class: "text-muted"%> </span>
+            <div class="border-top text-center">
+              <div class="mt-4">
+                <span>アカウントをお持ちでない方はこちら<br class="d-sm-none"/>「<%= link_to "無料登録", new_user_registration_path,data: {"turbolinks" => false}, style: "color: #00DB83;"%> 」</span>
+              </div>
+              <div class="mt-3 text-center">
+                <%= link_to "パスワードをお忘れの方はこちら", new_user_password_path,data: {"turbolinks" => false}, style: "color: #00DB83;"%>
+              </div>
             </div>
           </form>
           <% end %>
