--- a/app/views/notifications/index.html.erb
+++ b/app/views/notifications/index.html.erb
@@ -5,12 +5,12 @@
         <%= render partial: 'mypage/account_menu_mt-0' %>
       <% end %>
       <div class="col-xl-9 col-lg-9 col-md-12 col-12 mb-5 mt-2 ">
-        <div class="border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
+        <div class="d-flex border-bottom pb-2 mb-4 d-lg-flex justify-content-between align-items-center">
           <div>
             <h1 class="mb-0 h2">通知</h1>
           </div>
           <div>
-            <%= link_to "通知を全て削除する", destroy_all_notifications_path,data: {"turbolinks" => false}, method: :delete, class: "btn btn-outline-success" %>
+            <%= link_to "通知を全て削除する", destroy_all_notifications_path,data: {"turbolinks" => false}, method: :delete, class: "btn btn-outline-success btn-sm" %>
           </div>
         </div>
         <div class="card rounded-lg">
