--- a/public/geeks-1.0.1/src/assets/css/custom.css
+++ b/public/geeks-1.0.1/src/assets/css/custom.css
@@ -3,7 +3,7 @@ body {
 }
 
 .bg-primary {
-  background-color: #98FB98!important;
+  background-color: #e3fee4!important;
 }
 
 .card-img, .card-img-bottom, .card-img-top {
