edited mail text

--- a/app/views/answer_mailer/send_answer_notification_mail.text.erb
+++ b/app/views/answer_mailer/send_answer_notification_mail.text.erb
@@ -4,7 +4,7 @@
 
 ログインしてご確認をお願いいたします。
 
-<%= link_to "Keikenへログイン", new_user_session_path %>
+<%= link_to "Keikenへログイン", "https://www.keiken.info/users/sign_in" %>
 　
 よろしくお願いいたします。
 
