--- a/app/views/comment_mailer/send_comment_notification_mail.text.erb
+++ b/app/views/comment_mailer/send_comment_notification_mail.text.erb
@@ -2,9 +2,9 @@
 
 あなたの回答にコメントがありました。
 
-ログインしてご確認をお願いいたします。
+以下より、ログインしてご確認をお願いいたします。
 
-<%= link_to "Keikenへログイン", "https://www.keiken.info/users/sign_in" %>
+https://www.keiken.info/users/sign_in
 　
 よろしくお願いいたします。
 
